ISPN-1679 improve POM of Lucene module to use custom log4j configuration